--- a/sass/blocks/_profile-notifications.scss
+++ b/sass/blocks/_profile-notifications.scss
@@ -73,9 +73,7 @@
     align-items: center;
     cursor: pointer;
     user-select: none;
-    &:active {
-      background-color: transparent;
-    }
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
 
   &__item-header {
